Add .local/bin/copy Add .local/bin/ds-destroy Add .local/bin/httpstatus Add .local/bin/mksh Add .local/bin/murder Add .local/bin/pasta Add .local/bin/url Update .zshrc

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -55,6 +55,20 @@ alias dockercleardangling='docker rmi $(docker images -q -f dangling=true)'
 alias imgcat="wezterm imgcat"
 alias oo="cd $HOME/Documents/Obsidian/Personal/"
 alias nvim-light='NVIM_APPNAME="nvim-light" nvim'
+mkcd () {
+  \mkdir -p "$1"
+  cd "$1"
+}
+
+tempe () {
+  cd "$(mktemp -d)"
+  chmod -R 0700 .
+  if [[ $# -eq 1 ]]; then
+    \mkdir -p "$1"
+    cd "$1"
+    chmod -R 0700 .
+  fi
+}
 ## Evals
 eval $(thefuck --alias)
 
