--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -5,6 +5,7 @@ export BREWPATH=/opt/homebrew
 export PATH=$PATH:$BREWPATH/bin
 export XDG_CACHE_HOME=~/.cache
 export XDG_CONFIG_HOME=~/.config
+export OP_SERVICE_ACCOUNT_TOKEN={{ .opserviceaccount }}
 {{ if eq .location "home" -}}
 export GEMINI_API_KEY={{ .geminikey }}
 {{ end -}}
@@ -213,3 +214,4 @@ azure-artifact-login () {
 
 {{ end -}}
 eval "$(zoxide init zsh)"
+
