Update .aerospace.toml Update .config/ghostty/config Update .config/nvim/lua/plugins/gruvbox.lua Update .config/nvim/lua/plugins/lualine.lua Update .config/nvim/lua/plugins/versionFixing.lua Add .config/zsh/nord-fzf.sh Update .tmux.conf Update .zshrc

--- a/dot_config/nvim/lua/plugins/lualine.lua.tmpl
+++ b/dot_config/nvim/lua/plugins/lualine.lua.tmpl
@@ -6,6 +6,7 @@ return {
   {
     "nvim-lualine/lualine.nvim",
     opts = function(_, opts)
+      opts.theme = "nord"
       opts.sections.lualine_z = {}
       opts.sections.lualine_z = {
 {{ if eq .location "client" -}}
