--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -103,6 +103,7 @@ zle -N menu-search
 zle -N recent-paths
 zstyle '*:compinit' arguments -D -i -u -C -w
 # source ~/.config/zsh/gruvbox-zsh-syntax-highlighting.zsh
+test -r ~/.config/zsh/dir_colors && eval $(dircolors ~/.config/zsh/dir_colors)
 source ~/.config/zsh/nord-fzf.sh
 source $BREWPATH/share/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh
 source $BREWPATH/share/zsh-autocomplete/zsh-autocomplete.plugin.zsh
