feat: change colors to Nord

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -140,7 +140,7 @@ setopt auto_menu         # show completion menu on successive tab press
 setopt complete_in_word
 setopt always_to_end
 
-eval "$(oh-my-posh init zsh --config ~/.config/oh-my-gruvbox.omp.json)"
+eval "$(oh-my-posh init zsh --config ~/.config/slim.omp.json)"
 bindkey              '^I' menu-select
 bindkey "$terminfo[kcbt]" menu-select
 bindkey -M menuselect '^o' accept-and-infer-next-history
