--- a/dot_config/nvim/lua/plugins/lualine.lua.tmpl
+++ b/dot_config/nvim/lua/plugins/lualine.lua.tmpl
@@ -6,7 +6,7 @@ return {
   {
     "nvim-lualine/lualine.nvim",
     opts = function(_, opts)
-      opts.theme = "nord"
+      opts.theme = "nordic"
       opts.sections.lualine_z = {}
       opts.sections.lualine_z = {
 {{ if eq .location "client" -}}
